@@ -1,6 +1,9 @@
-CROSS := i386-aros
-CC    := $(CROSS)-gcc
-RM    := rm -f
+CPU  := i386
+OS   := aros
+HOST := $(CPU)-$(OS)
+
+CC := $(HOST)-gcc
+RM := rm -f
 
 TARGET  := filesysbox.library
 VERSION := 53
@@ -9,9 +12,16 @@ CFLAGS  := -O2 -s -Wall -Werror -Wwrite-strings -Iinclude -D__NOLIBBASE__
 LDFLAGS := -nostartfiles
 LIBS    := 
 
+ifeq ($(HOST),m68k-amigaos)
+	CFLAGS  := -noixemul $(CFLAGS)
+	LDFLAGS := -noixemul $(LDFLAGS)
+endif
+
 main_SRCS := $(wildcard main/*.c)
 main_OBJS := $(main_SRCS:.c=.o)
-SRCS := init.c filesysbox.c uptime.c doslist.c utf8.c ucs4.c debugf.c
+SRCS := init.c filesysbox.c uptime.c doslist.c \
+	utf8.c ucs4.c debugf.c allocvecpooled.c \
+	strlcpy.c
 OBJS := $(main_SRCS:.c=.o) $(SRCS:.c=.o)
 
 .PHONY: all
